--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <div class="row">
       <div class="col-lg-4">
         <div class="panel panel-default">
+            <img src="assets\images\black-silhouette-woman-holding-shopping-bags.jpg" class="card-img-top" alt="">
           <div class="panel-heading">
             <h3 class="panel-title"><small>Retail Search Parameters</small></h3>
           </div>
@@ -63,6 +64,7 @@
       <!-- Row for Searching Second Column -->
       <div class="col-lg-4">
         <div class="panel panel-default">
+            <img src="assets\images\waiter-serving-a-dish-silhouette.jpg" class="card-img-top" alt="...">
           <div class="panel-heading">
             <h3 class="panel-title"><small>Restaurant Search Parameters</small></h3>
           </div>
@@ -95,6 +97,8 @@
       <!-- Row for Searching Third Column -->
       <div class="col-lg-4">
         <div class="panel panel-default">
+            <img src="assets\images\mobile-stock-market-business-logo.jpg" class="card-img-top" alt="...">
+          
           <div class="panel-heading">
             <h3 class="panel-title"><small>STOCK TICKER GOES HERE</small></h3>
           </div>
