removed old non working api's, got 3 api's that are working to pull data from.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Shop Eat Stock</title>
+    <title>Financial Xchange</title>
       <!-- Added link to the jQuery Library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   </head>
@@ -22,18 +22,18 @@
     <div class="jumbotron" style="background-color: #4040a1 ; color: white;">
       <h1 class="text-center">
         <strong>
-          <i class="fa fa-newspaper-o"></i>Shop EAT Stock!</strong>
+          <i class="fa fa-newspaper-o"></i>Financial Xchange</strong>
       </h1>
-        <h3 class="text-center">Supplying current stock prices for the places you love to shop and eat</h3>
+        <h3 class="text-center">Compare financial data from 3 different sources</h3>
     </div>
 
     <!-- Row for Searching First Column -->
     <div class="row">
       <div class="col-lg-4">
         <div class="panel panel-default">
-            <img src="assets\images\black-silhouette-woman-holding-shopping-bags.jpg" class="card-img-top" alt="">
+            <img src="assets\images\yahoo finance.png" class="card-img-top" alt="">
           <div class="panel-heading">
-            <h3 class="panel-title"><small>Retail Search Parameters</small></h3>
+            <h3 class="panel-title"><small>Yahoo Finance API</small></h3>
           </div>
           <div class="panel-body">
             <form role="form">
@@ -64,9 +64,9 @@
       <!-- Row for Searching Second Column -->
       <div class="col-lg-4">
         <div class="panel panel-default">
-            <img src="assets\images\waiter-serving-a-dish-silhouette.jpg" class="card-img-top" alt="...">
+            <img src="assets\images\finance-graphic-up-rising-logo-vector-25233857.jpg" class="card-img-top" alt="...">
           <div class="panel-heading">
-            <h3 class="panel-title"><small>Restaurant Search Parameters</small></h3>
+            <h3 class="panel-title"><small>Investors Exchange API</small></h3>
           </div>
           <div class="panel-body">
             <form role="form">
@@ -97,14 +97,15 @@
       <!-- Row for Searching Third Column -->
       <div class="col-lg-4">
         <div class="panel panel-default">
-            <img src="assets\images\mobile-stock-market-business-logo.jpg" class="card-img-top" alt="...">
+            <img src="assets\images\bitcoin-crypto-currency-stick-graph-chart-of-stock-vector-16544400.jpg" class="card-img-top" alt="...">
           
           <div class="panel-heading">
-            <h3 class="panel-title"><small>STOCK TICKER GOES HERE</small></h3>
+            <h3 class="panel-title"><small>Crypto Asset Ticker</small></h3>
           </div>
 
             <div class="panel-body">
               <form role="form">
+                  
                 <div class="form-group">
                   <label for="text"> </label>
                   <input type="search" class="form-control" id="searchInput">
