3rd api addded and working

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
     <div class="row">
       <div class="col-lg-4">
         <div class="panel panel-default">
-            <img src="assets\images\yahoo finance.png" class="card-img-top" alt="">
+            <img src="assets\images\currency-exchange-dollar-and-rupee-vector-3730203.jpg" class="card-img-top" alt="">
           <div class="panel-heading">
-            <h3 class="panel-title"><small>Yahoo Finance API</small></h3>
+            <h3 class="panel-title"><small>Cuerrency Converter:</small></h3>
           </div>
           <div class="panel-body">
             <form role="form">
               <div class="form-group">
-                <label for="text">Retail Name: </label>
+                <label for="text">Retail Name </label>
                 <input type="search" class="form-control" id="searchInput">
               </div>
 
