updating the index.html file to reflect app change.

--- a/index.html
+++ b/index.html
@@ -25,34 +25,34 @@
         <h3 class="text-center">Supplying current stock prices for the places you love to shop and eat</h3>
     </div>
 
-    <!-- Row for Searching First Column -->
+    <!-- Row for Searching First Column Currency Converter -->
     <div class="row">
       <div class="col-lg-4">
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title"><small>Retail Search Parameters</small></h3>
+            <h3 class="panel-title"><small>Currency Converter:</small></h3>
           </div>
           <div class="panel-body">
             <form role="form">
               <div class="form-group">
-                <label for="text">Retail Name: </label>
+                <label for="text">US Dollar Amount: </label>
                 <input type="search" class="form-control" id="searchInput">
               </div>
 
               <div class="form-group">
-                  <label for="text">Retail Location: </label>
+                  <label for="text">Euro Amount: </label>
                   <input type="search" class="form-control" id="searchInput">
               </div>
 
               <div class="form-group">
-                  <label for="text">Retail Type: </label>
+                  <label for="text">Exchange Rate </label>
                   <input type="search" class="form-control" id="searchInput">
               </div>
 
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label for="text">Retail Merchandise: </label>
                     <input type="search" class="form-control" id="searchInput">
-                </div>
+                </div> -->
                 <button type="Submit" class="btn btn-default" id="search">Submit</button>
             </form>
           </div>
