--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h3 class="text-center">Compare financial data from 3 different sources</h3>
     </div>
 
-    <!-- Row for Searching First Column Yahoo Finance -->
+    <!-- Row for Searching First Column Currency Converter -->
     <div class="row">
       <div class="col-lg-4">
         <div class="panel panel-default">
