changed text on html

--- a/index.html
+++ b/index.html
@@ -38,22 +38,22 @@
           <div class="panel-body">
             <form role="form">
               <div class="form-group">
-                <label for="text">Retail Name </label>
+                <label for="text">Beginning Currency: </label>
                 <input type="search" class="form-control" id="searchInput">
               </div>
 
               <div class="form-group">
-                  <label for="text">Retail Location: </label>
+                  <label for="text">Ending Currency: </label>
                   <input type="search" class="form-control" id="searchInput">
               </div>
 
               <div class="form-group">
-                  <label for="text">Retail Type: </label>
+                  <label for="text">Exchange Rate: </label>
                   <input type="search" class="form-control" id="searchInput">
               </div>
 
                 <div class="form-group">
-                    <label for="text">Retail Merchandise: </label>
+                    <label for="text">Currency Amount:</label>
                     <input type="search" class="form-control" id="searchInput">
                 </div>
                 <button type="Submit" class="btn btn-default" id="search">Submit</button>
