--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
             <form role="form">
               <div class="form-group">
                 <label for="text">Beginning Currency: </label>
-                <input type="search" class="form-control" id="searchInput">
+                <h3 type="search" class="form-control" id="beginningCurrency"></h3>
               </div>
 
               <div class="form-group">
                   <label for="text">Ending Currency: </label>
-                  <input type="search" class="form-control" id="searchInput">
+                  <h3 type="search" class="form-control" id="endingCurrency"></h3>
               </div>
 
               <div class="form-group">
